--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.15",
-    "tailwindcss": "^4.0.12"
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -24,6 +23,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   }
 }
